install/istio-gateway-resources/ingress-gateway-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coolstore-gateway-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - coolstore-gateway
  http:
  - match:
      - uri:
          prefix: "/auth"
    route:
      - destination:
          host: keycloak.default.svc.cluster.local
  - route:
    - destination:
        host: web.default.svc.cluster.local
        port:
          number: 8080
